--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -20,11 +20,11 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script>
-    document.addEventListener('DOMContentLoaded', function() {   
-    M.AutoInit()
+    // document.addEventListener('DOMContentLoaded', function() {   
+    // M.AutoInit()
     
-    }
-    )
+    // }
+    // )
     </script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
