--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -20,6 +20,11 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script>
+
+document.addEventListener('DOMContentLoaded', function() {
+    var elems = document.querySelectorAll('select');
+    var instances = M.FormSelect.init(elems, options);
+  });
     // document.addEventListener('DOMContentLoaded', function() {   
     // M.AutoInit()
     
